<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="suggestions_authority" translatable="false">com.tct.email.suggestionsprovider</string>
    <string name="permission_read_attachment_label">"Read email attachments"</string>
    <string name="permission_read_attachment_desc">"Allows the app to read your email attachments."</string>
    <string name="permission_access_provider_label">"Access Email provider data"</string>
    <string name="permission_access_provider_desc">"Allows the app to access your email database, including received messages, sent messages, usernames, and passwords."</string>
    <string name="debug_title">"Debug"</string>
    <string name="next_action">"Next"</string>
    <string name="okay_action">"OK"</string>
    <string name="cancel_action">"Cancel"</string>
    <string name="previous_action">"Previous"</string>
    <string name="done_action">"Done"</string>
    <string name="create_action">"Create new"</string>
    <string name="quick_responses_empty_view">"No quick responses."</string>
    <string name="account_settings_action">"Account settings"</string>
    <string name="status_network_error">"Connection problem."</string>
    <plurals name="move_messages">
        <item quantity="one">"Move message"</item>
        <item quantity="other">"Move messages"</item>
    </plurals>
    <string name="cannot_move_protocol_not_supported_toast">"Move is not supported on POP3 accounts."</string>
    <string name="cannot_move_multiple_accounts_toast">"Can\'t move because selection contains multiple accounts."</string>
    <string name="cannot_move_special_mailboxes_toast">"Messages in Drafts, Outbox, and Sent can\'t be moved."</string>
    <string name="mailbox_name_display_inbox">"Inbox"</string>
    <string name="mailbox_name_display_outbox">"Outbox"</string>
    <string name="mailbox_name_display_drafts">"Drafts"</string>
    <string name="mailbox_name_display_trash">"Trash"</string>
    <string name="mailbox_name_display_sent">"Sent"</string>
    <string name="mailbox_name_display_junk">"Junk"</string>
    <string name="mailbox_name_display_starred">"Starred"</string>
    <string name="mailbox_name_display_unread">"Unread"</string>
    <string name="debug_enable_debug_logging_label" translatable="false"> Enable extra debug logging?</string>
    <string name="debug_enable_verbose_logging_label" translatable="false"> Enable extremely verbose logging?</string>
    <string name="debug_enable_file_logging_label" translatable="false"> Enable sd card logging?</string>
    <string name="debug_clear_webview_cache" translatable="false"> Clear WebView cache</string>
    <string name="debug_disable_graphics_acceleration_label" translatable="false"> Disable hardware graphics acceleration</string>
    <string name="debug_force_one_minute_refresh_label" translatable="false"> Force 1-minute refresh for POP/IMAP</string>
    <string name="debug_enable_strict_mode_label" translatable="false"> Enable strict mode (with logging)</string>
    <string name="account_folder_list_summary_inbox">"Inbox"</string>
    <string name="account_folder_list_summary_starred">"Starred"</string>
    <string name="account_folder_list_summary_drafts">"Drafts"</string>
    <string name="account_folder_list_summary_outbox">"Outbox"</string>
    <string name="mailbox_list_account_selector_combined_view">"Combined view"</string>
    <string name="message_compose_fwd_header_fmt">"\n\n-------- Original Message --------\nSubject: <xliff:g id="subject">%1$s</xliff:g>\nFrom: <xliff:g id="sender">%2$s</xliff:g>\nTo: <xliff:g id="to">%3$s</xliff:g>\nCC: <xliff:g id="cc">%4$s</xliff:g>\n\n"</string>
    <string name="message_compose_insert_quick_response_list_title">"Insert quick response"</string>
    <string name="message_compose_insert_quick_response_menu_title">"Insert quick response"</string>
    <string name="message_view_attachment_background_load">"One or more attachments in your forwarded message will be downloaded prior to sending."</string>
    <string name="attachment_not_found">"Couldn\'t download the attachment."</string>
    <string name="message_decode_error">"There was an error while decoding the message."</string>
    <string name="forward_download_failed_ticker">"Couldn\'t forward one or more attachments."</string>
    <string name="forward_download_failed_title">"Attachment not forwarded"</string>
    <string name="login_failed_ticker">"<xliff:g id="account_name">%s</xliff:g> signin unsuccessful."</string>
    <string name="login_failed_title">"Couldn\'t sign in"</string>
    <plurals name="message_view_attachment_bytes">
        <item quantity="one">"<xliff:g example="1" id="size_in_bytes">%d</xliff:g>B"</item>
        <item quantity="other">"<xliff:g example="279" id="size_in_bytes">%d</xliff:g>B"</item>
    </plurals>
    <plurals name="message_view_attachment_kilobytes">
        <item quantity="one">"<xliff:g example="1" id="size_in_kilobytes">%d</xliff:g>KB"</item>
        <item quantity="other">"<xliff:g example="279" id="size_in_kilobytes">%d</xliff:g>KB"</item>
    </plurals>
    <plurals name="message_view_attachment_megabytes">
        <item quantity="one">"<xliff:g example="1" id="size_in_megabytes">%d</xliff:g>MB"</item>
        <item quantity="other">"<xliff:g example="279" id="size_in_megabytes">%d</xliff:g>MB"</item>
    </plurals>
    <string name="account_settings_background_attachments_label">"Download attachments"</string>
    <string name="account_settings_background_attachments_summary">"Auto-download attachments to recent messages via Wi-Fi"</string>
    <string name="account_settings_notify_label">"Email notifications"</string>
    <string name="account_settings_notify_summary">"Send notification when email arrives"</string>
    <string name="account_settings_mail_check_frequency_label">"Sync frequency"</string>
    <string name="account_settings_incoming_label">"Incoming settings"</string>
    <string name="account_settings_incoming_summary">"Username, password, and other incoming server settings"</string>
    <string name="account_settings_outgoing_label">"Outgoing settings"</string>
    <string name="account_settings_outgoing_summary">"Username, password, and other outgoing server settings"</string>
    <string name="account_settings_reply_to_category">"Reply to settings"</string>
    <string name="account_settings_reply_to_label">"Reply to"</string>
    <string name="account_settings_enforced_label">"Policies enforced"</string>
    <string name="account_settings_enforced_summary">"None"</string>
    <string name="account_settings_unsupported_label">"Unsupported policies"</string>
    <string name="account_settings_unsupported_summary">"None"</string>
    <string name="account_settings_retry_label">"Attempt sync"</string>
    <string name="account_settings_retry_summary">"Touch here to sync this account"</string>
    <string name="account_settings_description_label">"Account name"</string>
    <string name="account_settings_name_label">"Your name"</string>
    <string name="account_settings_edit_quick_responses_label">"Quick response"</string>
    <string name="account_settings_edit_quick_responses_summary">"Edit text that you frequently insert when composing emails"</string>
    <string name="account_settings_notifications">"Notification settings"</string>
    <string name="account_settings_data_usage">"Data usage"</string>
    <string name="account_settings_policies">"Security policies"</string>
    <string name="system_folders_title">"System folders"</string>
    <string name="system_folders_trash_title">"Trash folder"</string>
    <string name="system_folders_trash_summary">"Select your server\'s trash folder"</string>
    <string name="system_folders_trash_dlg">"Select your server\'s trash folder"</string>
    <string name="system_folders_sent_title">"Sent items folder"</string>
    <string name="system_folders_sent_summary">"Select your server\'s sent items folder"</string>
    <string name="system_folders_sent_dlg">"Select your server\'s sent items folder"</string>
    <string name="account_settings_sync_contacts_enable">"Sync contacts"</string>
    <string name="account_settings_sync_contacts_summary">"Sync contacts for this account"</string>
    <string name="account_settings_sync_calendar_enable">"Sync calendar"</string>
    <string name="account_settings_sync_calendar_summary">"Sync calendar event for this account"</string>
    <string name="account_settings_sync_email_enable">"Sync email"</string>
    <string name="account_settings_sync_email_summary">"Sync emails for this account"</string>
    <string name="account_settings_vibrate_when_label">"Vibrate"</string>
    <string name="account_settings_ringtone">"Choose ringtone"</string>
    <string name="account_settings_servers">"Server settings"</string>
    <string name="account_settings_download_options_label">"Download options"</string>
    <string name="account_setting_oof_label">"Out of Office settings"</string>
    <string name="account_settings_category_delete_account">"Remove account"</string>
    <string name="account_settings_delete_account_label">"Remove account"</string>
    <string name="account_settings_default_label">"Default account"</string>
    <string name="account_settings_default_summary">"Send email from this account by default"</string>
    <string name="to">"To"</string>
    <string name="cc">"Cc"</string>
    <string name="bcc">"Bcc"</string>
    <string name="mark_read">"Mark read"</string>
    <string name="mark_unread">"Mark unread"</string>
    <string name="mute">"Mute"</string>
    <string name="add_star">"Add star"</string>
    <string name="remove_star">"Remove star"</string>
    <string name="remove_folder">"Remove from <xliff:g id="folderName">%1$s</xliff:g>"</string>
    <string name="archive">"Archive"</string>
    <string name="report_spam">"Report spam"</string>
    <string name="mark_not_spam">"Report: Not spam"</string>
    <string name="report_phishing">"Report phishing"</string>
    <string name="delete">"Delete"</string>
    <string name="discard_drafts">"Discard drafts"</string>
    <string name="discard_failed">"Discard failed"</string>
    <string name="menu_change_folders">"Change folders"</string>
    <string name="menu_move_to">"Move to"</string>
    <string name="menu_move_to_inbox">"Move to Inbox"</string>
    <string name="mark_important">"Mark as important"</string>
    <string name="mark_not_important">"Mark as not important"</string>
    <string name="select_all_conversations">"Select all"</string>
    <string name="unselect_all_conversations">"Unselect all"</string>
    <string name="contextmenu_openlink">"Open in Browser"</string>
    <string name="contextmenu_copy">"Copy"</string>
    <string name="contextmenu_copylink">"Copy link URL"</string>
    <string name="contextmenu_view_image">"View image"</string>
    <string name="contextmenu_dial_dot">"Call"</string>
    <string name="contextmenu_sms_dot">"SMS\u2026"</string>
    <string name="contextmenu_add_contact">"Add contact"</string>
    <string name="contextmenu_send_mail">"Send email"</string>
    <string name="contextmenu_map">"Map"</string>
    <string name="contextmenu_sharelink">"Share link"</string>
    <string name="contextmenu_savelink">"Save link"</string>
    <string name="preferences_signature_title">"Signature"</string>
    <string name="preferences_signature_dialog_title">"Signature"</string>
    <string name="manual_sync_when_roaming">"Sync while roaming"</string>
    <string name="manual_sync_when_roaming_summery">"Refresh manually only"</string>
    <string name="server_rules">"Server rules"</string>
    <string name="account_settings_inline_images_lable">"Images"</string>
</resources>