<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!--
| ============================================================================ |
|      Modifications on Features list / Changes Request / Problems Report      |
| **************************************************************************** |
|    date   |        author        |         Key          |      comment       |
| **********|**********************|**********************|******************* |
| 04/14/2014|     Chao Zhang       |      FR 635028       |[Email]Download op- |
|           |                      |porting from(FR472914)|tions to be implem- |
|           |                      |                      |ented               |
| **********|**********************|**********************|******************* |
================================================================================
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="account_description"
        android:title="@string/account_settings_description_label"
        android:summary=""
        android:dialogTitle="@string/account_settings_description_label"
        android:inputType="textCapWords" />

    <EditTextPreference
        android:key="account_name"
        android:title="@string/account_settings_name_label"
        android:summary=""
        android:dialogTitle="@string/account_settings_name_label"
        android:inputType="textPersonName|textCapWords" />

    <EditTextPreference
        android:key="account_signature"
        android:title="@string/preferences_signature_title"
        android:singleLine="false"
        android:dialogTitle="@string/preferences_signature_dialog_title"  />

    <!--[FEATURE]-ADD-BEGIN by TSNJ,wenlu.wu,10/20/2014,FR-719110-->
    <Preference
        android:key="account_oofsettings"
        android:title="@string/account_setting_oof_label">
    </Preference>
    <!--[FEATURE]-ADD-END by TSNJ,wenlu.wu,10/20/2014,FR-719110-->

    <PreferenceScreen
        android:key="account_quick_responses"
        android:title="@string/account_settings_edit_quick_responses_label"
        android:summary="@string/account_settings_edit_quick_responses_summary" />

    <CheckBoxPreference
    android:key="account_default"
    android:title="@string/account_settings_default_label"
    android:summary="@string/account_settings_default_summary" />

    <PreferenceCategory
        android:key="data_usage"
        android:title="@string/account_settings_data_usage">

        <ListPreference
            android:key="account_check_frequency"
            android:order="1"
            android:title="@string/account_settings_mail_check_frequency_label"
            android:entries="@array/account_settings_check_frequency_entries"
            android:entryValues="@array/account_settings_check_frequency_values"
            android:dialogTitle="@string/account_settings_mail_check_frequency_label" />

        <!-- Reserve order#2,3,4 here for window size (if inserted) -->

        <CheckBoxPreference
            android:key="account_sync_email"
            android:order="5"
            android:defaultValue="true"
            android:title="@string/account_settings_sync_email_enable"
            android:summary="@string/account_settings_sync_email_summary" />
        <CheckBoxPreference
            android:key="account_sync_contacts"
            android:order="6"
            android:defaultValue="true"
            android:title="@string/account_settings_sync_contacts_enable"
            android:summary="@string/account_settings_sync_contacts_summary" />
        <CheckBoxPreference
            android:key="account_sync_calendar"
            android:order="7"
            android:defaultValue="true"
            android:title="@string/account_settings_sync_calendar_enable"
            android:summary="@string/account_settings_sync_calendar_summary" />

        <!-- (will hide on POP3 accounts) -->
        <CheckBoxPreference
            android:key="account_background_attachments"
            android:order="8"
            android:title="@string/account_settings_background_attachments_label"
            android:summary="@string/account_settings_background_attachments_summary" />

        <!--[FEATURE]-Add-BEGIN by TSCD.Chao Zhang,04/14/2014,FR 631895(porting from FR 472914)-->
        <ListPreference
            android:key="account_download_options"
            android:title="@string/account_settings_download_options_label"
            android:entries="@array/Email_Download_Options"
            android:entryValues="@array/Email_Download_Options_values"
            android:dialogTitle="@string/account_settings_download_options_label" android:order="7"/>
        <!--[FEATURE]-Add-END by TSCD.Chao Zhang-->

        <!-- TS: tao.gan 2015-08-12 EMAIL FEATURE-ID ADD_S -->
        <ListPreference 
            android:key="account_inline_images"
            android:order="8"
            android:title="@string/account_settings_inline_images_lable"
            android:entries="@array/Email_inline_images_show"
            android:entryValues="@array/Email_inline_images_show_values"
            android:dialogTitle="@string/account_settings_inline_images_lable"/>
        <!-- TS: tao.gan 2015-08-12 EMAIL FEATURE-ID ADD_E -->

    </PreferenceCategory>

    <!-- TS: jin.dong 2015-12-29 EMAIL FEATURE_1125784 ADD_S -->
    <PreferenceCategory
        android:key="server_policy"
        android:title="@string/server_rules">

        <Preference
            android:key="manual_sync_when_roaming"
            android:title="@string/manual_sync_when_roaming"
            android:summary="@string/manual_sync_when_roaming_summery"
            />

    </PreferenceCategory>
    <!-- TS: jin.dong 2015-12-29 EMAIL FEATURE_1125784 ADD_E -->

    <!-- This category is enabled after the folder preferences are loaded -->
    <PreferenceCategory
        android:enabled="false"
        android:key="account_notifications"
        android:title="@string/account_settings_notifications">

        <CheckBoxPreference
            android:key="notifications-enabled"
            android:title="@string/account_settings_notify_label"
            android:defaultValue="true"
            android:summary="@string/account_settings_notify_summary" />

        <Preference
            android:key="notification-ringtone"
            android:dependency="notifications-enabled"
            android:title="@string/account_settings_ringtone" />

        <CheckBoxPreference
            android:key="notification-vibrate"
            android:dependency="notifications-enabled"
            android:defaultValue="false"
            android:title="@string/account_settings_vibrate_when_label" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="system_folders"
        android:title="@string/system_folders_title">

        <Preference
            android:key="system_folders_trash"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/system_folders_trash_title"
            android:summary="@string/system_folders_trash_summary"
            android:dialogTitle="@string/system_folders_trash_dlg"
            />

        <Preference
            android:key="system_folders_sent"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/system_folders_sent_title"
            android:summary="@string/system_folders_sent_summary"
            android:dialogTitle="@string/system_folders_sent_dlg"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="account_servers"
        android:title="@string/account_settings_servers">

        <PreferenceScreen
            android:key="incoming"
            android:title="@string/account_settings_incoming_label"
            android:summary="@string/account_settings_incoming_summary" />

        <PreferenceScreen
            android:key="outgoing"
            android:title="@string/account_settings_outgoing_label"
            android:summary="@string/account_settings_outgoing_summary" />
    </PreferenceCategory>

    <!--TS: tao.gan 2015-12-25 EMAIL FEATURE-1239148 ADD_S-->
    <!-- Add reply-to option -->
    <PreferenceCategory
        android:key="account_reply_to_cate"
        android:title="@string/account_settings_reply_to_category">

        <EditTextPreference
            android:key="account_reply_to"
            android:title="@string/account_settings_reply_to_label"
            android:summary=""
            android:dialogTitle="@string/account_settings_reply_to_label"
            android:inputType="textCapWords" />
    </PreferenceCategory>
    <!--TS: tao.gan 2015-12-25 EMAIL FEATURE-1239148 ADD_E-->

    <PreferenceCategory
        android:key="account_policies"
        android:title="@string/account_settings_policies">

        <com.tct.email.activity.setup.PolicyListPreference
            android:key="policies_enforced"
            android:title="@string/account_settings_enforced_label"
            android:summary="@string/account_settings_enforced_summary" />

        <com.tct.email.activity.setup.PolicyListPreference
            android:key="policies_unsupported"
            android:title="@string/account_settings_unsupported_label"
            android:summary="@string/account_settings_unsupported_summary" />

        <Preference
            android:key="policies_retry_account"
            android:title="@string/account_settings_retry_label"
            android:summary="@string/account_settings_retry_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="delete_account_category"
        android:title="@string/account_settings_category_delete_account">

        <PreferenceScreen
            android:key="delete_account"
            android:title="@string/account_settings_delete_account_label" />
    </PreferenceCategory>

</PreferenceScreen>
