<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
/*

 ==========================================================================
 *HISTORY
 *
 *Tag                 Date        Author             Description
 *============== ============ =============== ==============================
 *BUGFIX_1133819   2015/1/26     yanhua.chen      [E2E][Defect-298935][Email_V5.1.0.1.0154.0]There is no way to Save an URL as a bookmark that was sent from an Email
 *===========================================================================
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/PHONE_MENU">
        <item android:id="@+id/dial_context_menu_id"
            android:title="@string/contextmenu_dial_dot"/>
        <item android:id="@+id/sms_context_menu_id"
            android:title="@string/contextmenu_sms_dot"/>
        <item android:id="@+id/add_contact_context_menu_id"
            android:title="@string/contextmenu_add_contact"/>
        <item android:id="@+id/copy_phone_context_menu_id"
            android:title="@string/contextmenu_copy"/>
    </group>
    <group android:id="@+id/EMAIL_MENU">
        <item android:id="@+id/email_context_menu_id"
            android:title="@string/contextmenu_send_mail"/>
        <item android:id="@+id/copy_mail_context_menu_id"
            android:title="@string/contextmenu_copy"/>
    </group>
    <group android:id="@+id/GEO_MENU">
        <item android:id="@+id/map_context_menu_id"
            android:title="@string/contextmenu_map"/>
        <item android:id="@+id/copy_geo_context_menu_id"
            android:title="@string/contextmenu_copy"/>
    </group>
    <group android:id="@+id/ANCHOR_MENU">
        <item android:id="@+id/open_context_menu_id"
            android:title="@string/contextmenu_openlink"/>
        <item android:id="@+id/copy_link_context_menu_id"
            android:title="@string/contextmenu_copylink"/>
        <item android:id="@+id/share_link_context_menu_id"
            android:title="@string/contextmenu_sharelink"/>
        <item android:id="@+id/save_link_context_menu_id"
            android:title="@string/contextmenu_savelink"/><!-- TS: yanhua.chen 2015-1-26 EMAIL BUGFIX_1133819 ADD -->
    </group>
    <group android:id="@+id/IMAGE_MENU">
        <item android:id="@+id/view_image_context_menu_id"
              android:title="@string/contextmenu_view_image"/>
    </group>
</menu>

